syntax = "proto3";

package nebulix.storage.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "nebulix/storage/v1/file.proto";
import "nebulix/storage/v1/params.proto";
import "nebulix/storage/v1/proof.proto";
import "nebulix/storage/v1/provider.proto";
import "nebulix/storage/v1/subscription.proto";

option go_package = "nebulix/x/storage/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/nebulix/storage/v1/params";
  }

  // Provider Queries a list of Provider items.
  rpc Provider(QueryProviderRequest) returns (QueryProviderResponse) {
    option (google.api.http).get = "/nebulix/storage/v1/provider/{address}";
  }

  // Providers Queries a list of Providers items.
  rpc Providers(QueryProvidersRequest) returns (QueryProvidersResponse) {
    option (google.api.http).get = "/nebulix/storage/v1/providers";
  }

  // File Queries a list of File items.
  rpc File(QueryFileRequest) returns (QueryFileResponse) {
    option (google.api.http).get = "/nebulix/storage/v1/file/{fid}";
  }

  // Files Queries a list of Files items.
  rpc Files(QueryFilesRequest) returns (QueryFilesResponse) {
    option (google.api.http).get = "/nebulix/storage/v1/files";
  }

  // Subscription Queries a list of Subscription items.
  rpc Subscription(QuerySubscriptionRequest) returns (QuerySubscriptionResponse) {
    option (google.api.http).get = "/nebulix/storage/v1/subscription";
  }

  // Subscriptions Queries a list of Subscriptions items.
  rpc Subscriptions(QuerySubscriptionsRequest) returns (QuerySubscriptionsResponse) {
    option (google.api.http).get = "/nebulix/storage/v1/subscriptions";
  }

  // Challenges Queries a list of Challenges items.
  rpc Challenges(QueryChallengesRequest) returns (QueryChallengesResponse) {
    option (google.api.http).get = "/nebulix/storage/v1/challenges";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryProviderRequest defines the QueryProviderRequest message.
message QueryProviderRequest {
  string address = 1;
}

// QueryProviderResponse defines the QueryProviderResponse message.
message QueryProviderResponse {
  Provider provider = 1;
}

// QueryProvidersRequest defines the QueryProvidersRequest message.
message QueryProvidersRequest {}

// QueryProvidersResponse defines the QueryProvidersResponse message.
message QueryProvidersResponse {
  repeated Provider providers = 1;
}

// QueryFileRequest defines the QueryFileRequest message.
message QueryFileRequest {
  string fid = 1;
}

// QueryFileResponse defines the QueryFileResponse message.
message QueryFileResponse {
  File file = 1;
}

// QueryFilesRequest defines the QueryFilesRequest message.
message QueryFilesRequest {
  string creator = 1;
  string subscription = 2;
  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

// QueryFilesResponse defines the QueryFilesResponse message.
message QueryFilesResponse {
  repeated File files = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QuerySubscriptionRequest defines the QuerySubscriptionRequest message.
message QuerySubscriptionRequest {
  string subscriber_address = 1;
  string subscription_id = 2;
}

// QuerySubscriptionResponse defines the QuerySubscriptionResponse message.
message QuerySubscriptionResponse {
  StorageSubscription subscription = 1;
}

// QuerySubscriptionsRequest defines the QuerySubscriptionsRequest message.
message QuerySubscriptionsRequest {
  string subscriber_address = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QuerySubscriptionsResponse defines the QuerySubscriptionsResponse message.
message QuerySubscriptionsResponse {
  repeated StorageSubscription subscriptions = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryChallengesRequest defines the QueryChallengesRequest message.
message QueryChallengesRequest {
  string provider = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

// QueryChallengesResponse defines the QueryChallengesResponse message.
message QueryChallengesResponse {
  repeated StorageChallenge challenges = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
